# aura

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.linux.conda.txt  requirements.txt  test_ws.py
.github/workflows/: CI.yml  python-app.yml  rust.yml
.kaggle/: kaggle.json
aura/: README.md  __init__.py  app.py  demo_local.py  demo_onyx.py  utils.py
aura/camera/: __init__.py  hello.py  processor.py
aura/clip/: __init__.py  model.py
aura/cnn/: model.py  train.py
aura/dataset/: __init__.py  clip_provider.py  dataset_provider.py  label.py  pair.py  provider.py  t2v_model.py
aura/embed/: __init__.py  model.py  train.py
aura/processed_images/: Augmentation.ipynb
aura/queue/: __init__.py  queue.py
aura/signaling/: __init__.py  signaling.py
aura/sim_clr/: __init__.py  embed.py
aura/tests/: test_pair.py  test_processing_pipeline.py  test_provider.py  test_queue.py  test_signaling.py  test_streamer.py
aura/webrtc/: __init__.py  signaling.py  streamer.py
camera/processed_images/: dataset-pipeline.ipynb
docs/: README.md
notebooks/: README.md  StyleGAN2_ADA_test.ipynb  baseline_video_gen.ipynb  clip.ipynb  data_augmentation.ipynb  dataset_pipeline.ipynb  emotion_clip.ipynb  generate_video_cogvx.py  hello_world.ipynb  latte_inference.ipynb
scripts/: caption.py  convert_to_ivf.sh
src/: lib.rs  queue.rs  server.rs  signaling_types.rs  streamer.rs
tests/: test_all.py
ui/: package-lock.json  vercel.json
ui/app/: globals.css  page.tsx
ui/components/: WebRTC.tsx
(+3 files in other folders)
