[package]
name = "aura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aura"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.6", features = ["extension-module"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
futures-util = "0.3"
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = "0.24"
anyhow = "1.0"
webrtc = "0.11"
notify = "7.0"
http = "1.1"
